# sonic-swss

./: .gitignore  Makefile.am  configure.ac
cfgmgr/: vlanmgr.cpp  vlanmgr.h  vlanmgrd.cpp  vrfmgr.cpp  vrfmgr.h  vxlanmgr.cpp  vxlanmgr.h  vxlanmgrd.cpp
fdbsyncd/: Makefile.am  fdbsync.cpp  fdbsync.h  fdbsyncd.cpp
fpmsyncd/: fpmlink.cpp  fpmlink.h  fpmsyncd.cpp  routesync.cpp  routesync.h
orchagent/: fdborch.cpp  fdborch.h  intfsorch.cpp  neighorch.cpp  neighorch.h  nexthopgroupkey.h  nexthopkey.h  notifications.cpp  orch.cpp  orch.h  orchdaemon.cpp  port.h  portsorch.cpp  portsorch.h  routeorch.cpp  routeorch.h  vnetorch.cpp  vrforch.cpp  vrforch.h  vxlanorch.cpp  vxlanorch.h
tests/: conftest.py  test_evpn_fdb.py  test_evpn_tunnel.py  test_fdb_clear_all.py  test_fdb_clear_port.py  test_fdb_clear_vlan.py  test_fdb_dynamic_mac_add.py  test_fdb_dynamic_mac_del.py  test_fdb_flush_port_vlan_remove.py  test_fdb_mac_readd_port_vlan_add.py  test_fdb_negative.py  test_fdb_no_flush_static_port_down.py  test_fdb_static_mac_add.py  test_fdb_static_mac_del.py
